// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/UserNavigate-ce render snap 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <span
          class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-avatar-string"
            style="transform: scale(1) translateX(-50%);"
          >
            T
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserNavigate-ce render snap 2`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <span
          class="ant-avatar ant-avatar-circle action-avatar ant-popover-open css-1wq79dc css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-avatar-string"
            style="transform: scale(1) translateX(-50%);"
          >
            T
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-th3cxr"
            >
              <div
                class="header"
              >
                Test name
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 1.33325C11.6797 1.33325 14.6663 4.31992 14.6663 7.99992C14.6663 11.6799 11.6797 14.6666 7.99967 14.6666C4.31967 14.6666 1.33301 11.6799 1.33301 7.99992C1.33301 4.31992 4.31967 1.33325 7.99967 1.33325ZM4.01501 10.2773C4.99367 11.7373 6.46301 12.6666 8.10634 12.6666C9.74901 12.6666 11.219 11.7379 12.197 10.2773C11.0875 9.24032 9.62497 8.66446 8.10634 8.66659C6.58748 8.66429 5.12468 9.24016 4.01501 10.2773ZM7.99967 7.33325C8.53011 7.33325 9.03882 7.12254 9.41389 6.74747C9.78896 6.37239 9.99967 5.86369 9.99967 5.33325C9.99967 4.80282 9.78896 4.29411 9.41389 3.91904C9.03882 3.54397 8.53011 3.33325 7.99967 3.33325C7.46924 3.33325 6.96053 3.54397 6.58546 3.91904C6.21039 4.29411 5.99967 4.80282 5.99967 5.33325C5.99967 5.86369 6.21039 6.37239 6.58546 6.74747C6.96053 7.12254 7.46924 7.33325 7.99967 7.33325Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    个人中心
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 14.6666C4.31767 14.6666 1.33301 11.6819 1.33301 7.99992C1.33301 4.31792 4.31767 1.33325 7.99967 1.33325C11.6817 1.33325 14.6663 4.31792 14.6663 7.99992C14.6663 11.6819 11.6817 14.6666 7.99967 14.6666ZM7.33301 7.33325V11.3333H8.66634V7.33325H7.33301ZM7.33301 4.66659V5.99992H8.66634V4.66659H7.33301Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    查看版本号
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 14.6666C4.31777 14.6666 1.33301 11.6818 1.33301 7.99992C1.33301 4.31802 4.31777 1.33325 7.99967 1.33325C11.6815 1.33325 14.6663 4.31802 14.6663 7.99992C14.6663 11.6818 11.6815 14.6666 7.99967 14.6666ZM11.333 10.6666L14.6663 7.99992L11.333 5.33325V7.33325H5.99967V8.66659H11.333V10.6666Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    退出登录
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserNavigate-ce render snap 3`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <span
          class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-avatar-string"
            style="transform: scale(1) translateX(-50%);"
          >
            T
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden css-dev-only-do-not-override-txh9fw css-dev-only-do-not-override-txh9fw ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-th3cxr"
            >
              <div
                class="header"
              >
                Test name
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 1.33325C11.6797 1.33325 14.6663 4.31992 14.6663 7.99992C14.6663 11.6799 11.6797 14.6666 7.99967 14.6666C4.31967 14.6666 1.33301 11.6799 1.33301 7.99992C1.33301 4.31992 4.31967 1.33325 7.99967 1.33325ZM4.01501 10.2773C4.99367 11.7373 6.46301 12.6666 8.10634 12.6666C9.74901 12.6666 11.219 11.7379 12.197 10.2773C11.0875 9.24032 9.62497 8.66446 8.10634 8.66659C6.58748 8.66429 5.12468 9.24016 4.01501 10.2773ZM7.99967 7.33325C8.53011 7.33325 9.03882 7.12254 9.41389 6.74747C9.78896 6.37239 9.99967 5.86369 9.99967 5.33325C9.99967 4.80282 9.78896 4.29411 9.41389 3.91904C9.03882 3.54397 8.53011 3.33325 7.99967 3.33325C7.46924 3.33325 6.96053 3.54397 6.58546 3.91904C6.21039 4.29411 5.99967 4.80282 5.99967 5.33325C5.99967 5.86369 6.21039 6.37239 6.58546 6.74747C6.96053 7.12254 7.46924 7.33325 7.99967 7.33325Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    个人中心
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 14.6666C4.31767 14.6666 1.33301 11.6819 1.33301 7.99992C1.33301 4.31792 4.31767 1.33325 7.99967 1.33325C11.6817 1.33325 14.6663 4.31792 14.6663 7.99992C14.6663 11.6819 11.6817 14.6666 7.99967 14.6666ZM7.33301 7.33325V11.3333H8.66634V7.33325H7.33301ZM7.33301 4.66659V5.99992H8.66634V4.66659H7.33301Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    查看版本号
                  </span>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.99967 14.6666C4.31777 14.6666 1.33301 11.6818 1.33301 7.99992C1.33301 4.31802 4.31777 1.33325 7.99967 1.33325C11.6815 1.33325 14.6663 4.31802 14.6663 7.99992C14.6663 11.6818 11.6815 14.6666 7.99967 14.6666ZM11.333 10.6666L14.6663 7.99992L11.333 5.33325V7.33325H5.99967V8.66659H11.333V10.6666Z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <span
                    class="content-item-text"
                  >
                    退出登录
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
